WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300109
[GStreamer] Speaker enumeration doesn't work for ALSA virtual sinks
https://bugs.webkit.org/show_bug.cgi?id=300109
Summary
[GStreamer] Speaker enumeration doesn't work for ALSA virtual sinks
Loïc Le Page
Reported
2025-10-03 08:43:26 PDT
When calling `navigator.mediaDevices.enumerateDevices()` in a web page on a Linux operating system using ALSA for the audio configuration, the virtual sinks present in the ALSA configuration don't appear in the list. The bug is also present in WebKitGTK.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2025-10-06 12:18:43 PDT
Committed
301082@main
(a420a8c5cf21): <
https://commits.webkit.org/301082@main
> Reviewed commits have been landed. Closing PR #51757 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2025-10-06 12:19:12 PDT
<
rdar://problem/162059989
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug